# audacious-projectm-plugin

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  audacious-projectm.code-workspace
.github/workflows/: build.yml
doc/: milkdrop-variables.md  preset-installation.md
scripts/: build.sh  install-presets.sh  install.sh  prepare-aur.sh
src/: projectm-browser.cc  projectm-vis.cc
